# python-project-lvl3

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
page_load/: __init__.py  cli.py  exceptions.py  file.py  log.py  page_load.py  tree.py
page_load/scripts/: page_load.py
page_loader/: __init__.py  core.py  exceptions.py  file.py  logging.py  page_loader.py  tree.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  test_make_name.py  test_page_load.py  test_send_request.py  test_write_file.py
tests/fixtures/: 127-0-0-1-8000.html  courses.html  index.html  ru-hexlet-io-courses.html
tests/fixtures/127-0-0-1-8000_files/: scripts-script.js  styles-style.css
tests/fixtures/templates/: expected_page.html
