[tool.poetry]
name = "sdemikhov_page_loader"
version = "0.5.1"
description = "Page-loader is a CLI tool to download web pages."
authors = ["Sergey Demikhov <demikhov.sergey@gmail.com>"]

packages = [
  { include = "page_loader" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.7"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
beautifulsoup4 = "^4.9.1"
progress = "^1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"
pytest = "^5.4.2"
pytest-cov = "^2.10.0"
jinja2 = "^2.11.2"
requests_mock = "^1.8.0"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
